tests/error/lessThanEqualsInteger-wrong-1st-argument-data.uplc
(program 1.0.0[[(builtin lessThanEqualsInteger)(con data {ByteString #AFD3})](con integer 10)])